# color-clusterer

./: .gitignore  CMakeLists.txt  Main.qml  README.md  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: backend.cpp  backend.h
color_clusterer/: color_clusterer.cpp  color_clusterer.h
color_converter/: color_converter.cpp  color_converter.h
color_spaces/: lab.h  rgb.h  rgba.h
core/color_clusterer/: color_clusterer.cpp  color_clusterer.h
core/color_converter/: color_converter.cpp  color_converter.h
core/color_spaces/: rgb.h
logging/: logger.h
src/: main.cpp
src/app/: app.cpp  app.h
src/core/color_clusterer/: color_clusterer.cpp  color_clusterer.h
src/core/color_spaces/: lab.h
src/core/palette_color/: palette_color.h
src/logging/: logger.cpp
src/qml/: Main.qml
